# utk_future_dc_worktypes

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/contents/: 1_generic.rst  2_image.rst  3_video.rst  4_audio.rst  5_pdf.rst  6_books_and_pages.rst  7_compound_objects.rst  8_newspapers.rst
docs/source/fixtures/: audio_1file.ttl  audio_multiple_files.ttl  book.ttl  compound.ttl  generic.ttl  image.ttl  newspaper.ttl  pdf.ttl  video.ttl
