[tool.poetry]
name = "UTK Future DC Worktypes"
version = "0.1.0"
description = "A Documenation Portal that Describe Future Worktypes for UTK's Digital Collections"
authors = ["Mark Baggett <mbagget1@utk.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
